@@ -234,12 +234,12 @@ setup(int argc, char **argv)
 	    bu_exit(1, "Automatic sizing can not be used with pipes.\n");
 	}
     } else {
-	char *ifname = bu_realpath(argv[bu_optind], NULL);
+	char *ifname = bu_file_realpath(argv[bu_optind], NULL);
 	if (freopen(ifname, "r", stdin) == NULL ) {
-	    bu_free(ifname,"ifname alloc from bu_realpath");
+	    bu_free(ifname,"ifname alloc from bu_file_realpath");
 	    bu_exit(1, "halftone: cannot open \"%s\" for reading.\n", argv[bu_optind]);
 	}
-	bu_free(ifname,"ifname alloc from bu_realpath");
+	bu_free(ifname,"ifname alloc from bu_file_realpath");
 	if (autosize) {
 	    if ( !fb_common_file_size((size_t *)&width, (size_t *)&height, argv[bu_optind], 1)) {
 		(void) fprintf(stderr, "halftone: unable to autosize.\n");
