@@ -124,12 +124,12 @@ get_args(int argc, char **argv)
 	    break;
 	case 1:
 	    file_name = argv[bu_optind++];
-	    ifname = bu_realpath(file_name, NULL);
+	    ifname = bu_file_realpath(file_name, NULL);
 	    if ((infd = open(ifname, O_RDONLY)) == -1) {
-		bu_free(ifname, "ifname alloc from bu_realpath");
+		bu_free(ifname, "ifname alloc from bu_file_realpath");
 		bu_exit (1, "Cannot open file '%s'\n", file_name);
 	    }
-	    bu_free(ifname, "ifname alloc from bu_realpath");
+	    bu_free(ifname, "ifname alloc from bu_file_realpath");
 	    fileinput = 1;
 	    break;
 	default:
