@@ -101,13 +101,13 @@ main(int argc, char **argv)
 	}
 	snprintf(name, 128, "%s.%ld", base_name, (unsigned long)framenumber);
 
-	ifname = bu_realpath(name, NULL);
+	ifname = bu_file_realpath(name, NULL);
 	if ((fd=creat(ifname, 0444))<0) {
 	    perror(ifname);
-	    bu_free(ifname, "ifname alloc from bu_realpath");
+	    bu_free(ifname, "ifname alloc from bu_file_realpath");
 	    continue;
 	}
-	bu_free(ifname, "ifname alloc from bu_realpath");
+	bu_free(ifname, "ifname alloc from bu_file_realpath");
 
 	rwval = write(fd, in1, scanbytes);
 	if ((size_t)rwval != scanbytes) {
